Threaded queue added